# gmod-chttp

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  Vagrantfile  build-linux.sh  build-windows.bat  build.sh  chttp-linux.exp  dist-build-single.sh  dist-docker.sh  dist.sh  premake5.lua  provision-build.sh  toolchain-linux.cmake  toolchain-linux32.cmake  toolchain-linux64.cmake  toolchain-win32.cmake  toolchain-win64.cmake  vagrant-deb9.sh  vagrant-provision-gmodds.sh  vagrant-provision.sh  vagrant-win.sh
.github/workflows/: build.yml  commit.yml  version-tag.yml
curl/: CMakeLists.txt
curl/lib/: libcurl-x64.lib  libcurl.lib
filter/: 00_chttp_disable_checkin.lua  00_chttp_disable_telemetry.lua  00_chttp_disable_update_notification.lua
src/: CMakeLists.txt  HTTPMethod.cpp  HTTPMethod.h  HTTPRequest.cpp  HTTPRequest.h  LockableQueue.h  Logger.cpp  Logger.h  LuaReference.cpp  LuaReference.h  LuaReferenceFreeTask.cpp  LuaReferenceFreeTask.h  LuaTask.cpp  LuaTask.h  RequestWorker.cpp  RequestWorker.h  ResultQueueData.cpp  ResultQueueData.h  chttp.cpp  chttp.h  http.cpp  http.h  lockqueue.cpp  lockqueue.h  lua.cpp  lua.h  main.cpp  method.cpp  method.h  threading.cpp  threading.h
src/linux/: CMakeLists.txt  threading.cpp
src/windows/: threading.cpp
tests/: chttp.lua  http.lua  server.py  test.lua  testlib.lua
